[1.2.6] New Hologram version